# psqs

./: .gitignore  Cargo.toml  Makefile  README.md  README.org
.github/workflows/: test.yml
benches/: read_aux.rs
scripts/: atomize.awk
src/: atom.rs  dump.rs  geom.rs  lib.rs  program.rs  queue.rs  tests.rs
src/program/: cfour.rs  dftbplus.rs  molpro.rs  mopac.rs
src/program/dftbplus/: tests.rs
src/program/molpro/: tests.rs
src/program/mopac/: params.rs  tests.rs
src/queue/: '  drain.rs  local.rs  pbs.rs  slurm.rs
src/queue/drain/: dump.rs  histogram.rs  resub.rs  timer.rs
src/queue/snapshots/: psqs__queue__local__tests__cfour_local.snap  psqs__queue__local__tests__dftb_local.snap  psqs__queue__local__tests__molpro_local.snap  psqs__queue__local__tests__mopac_local.snap  psqs__queue__pbs__tests__cfour_pbs.snap  psqs__queue__pbs__tests__dftb_pbs.snap  psqs__queue__pbs__tests__molpro_pbs.snap  psqs__queue__pbs__tests__mopac_pbs.snap  psqs__queue__slurm__tests__cfour_slurm.snap  psqs__queue__slurm__tests__dftb_slurm.snap  psqs__queue__slurm__tests__molpro_slurm.snap  psqs__queue__slurm__tests__mopac_slurm.snap
testfiles/dftb+/: single_opt.want  single_single.want
testfiles/molpro/: dzccr.out  opt.out
