[package]
name = "psqs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.1"
symm = { git = "https://github.com/ntBre/symm", rev = "2d523057" }
regex = "1"
lazy_static = "1.4.0"

[[bin]]
name = "read_out"
