[package]
name = "psqs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
nalgebra = { version = "0.31.1", features = ["serde-serialize"] }
rayon = "1.5.3"
regex = "1.5.5"
symm = { path = "/home/brent/Projects/symm" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"

[dev-dependencies]
criterion = "0.4.0"

[[bin]]
name = "read_out"

[[bench]]
name = "read_aux"
harness = false

[[bench]]
name = "write_input"
harness = false
