[package]
name = "psqs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.3"
regex = { version = "1.9.1" }
symm = { git = "https://github.com/ntBre/symm" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
chrono = "0.4.23"
libc = "0.2.139"
log = "0.4.21"

[dev-dependencies]
criterion = "0.5.0"

[[bin]]
name = "read_out"

[[bench]]
name = "read_aux"
harness = false

[[bench]]
name = "write_input"
harness = false
